<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/Login_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/noto_sans"
        android:text="@string/Login_text"
        android:textColor="#707070"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textColor="#707070"
        android:id="@+id/Login_text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:fontFamily="@font/noto_sans"
        android:text="@string/Heading_2"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/Login_text_1"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:textColor="#707070"
        android:id="@+id/Login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:drawableStart="@drawable/email"
        android:drawablePadding="10dp"
        android:textSize="20sp"
        android:hint="@string/e_mail_id_hint"
        android:fontFamily="@font/noto_sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Login_text_2"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress" />

    <EditText
        android:textColor="#707070"
        android:id="@+id/Login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="10dp"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:fontFamily="@font/noto_sans"
        android:autofillHints="password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Login_email"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/eye"
        android:layout_marginTop="45dp"
        android:paddingEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/Login_email"
        app:layout_constraintRight_toRightOf="@id/Login_password"
        android:contentDescription="@string/view_password"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/noto_sans"
        android:text="@string/Mobile_text"
        android:layout_marginEnd="25dp"
        android:textColor="#F3AA4E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Login_password"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:background="@drawable/button_bg"
        android:textAllCaps="false"
        android:text="@string/login_button"
        android:textColor="@color/white"
        android:textSize="18sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>